--- a/Style_home.css
+++ b/Style_home.css
@@ -127,9 +127,103 @@
     transform: scaleY(1.1);
   }
 
-  #details {
-    background-color: green;
+  .details {
+    background: linear-gradient(45deg, rgb(91, 91, 91), rgb(255, 255, 255));
+    width: 95%;
+    margin: 20px auto;
+    border-radius: 25px;
+    padding: 20px;
     transition: 0.4s;
+  }
+
+  .hobby {
+    border-radius: 20px;
+    margin: 0 auto;
+    padding: 10px;
+  }
+
+  .hobby .title {
+    font-weight: bold;
+    font-size: 25px;
+  }
+
+  .main_hobby {
+    display: flex;
+    justify-content: center;
+  }
+
+  .main_hobby h4 {
+    padding: 3px;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .game {
+    border: solid 1px black;
+    flex: 6;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px;
+    }
+
+  .game .info {
+    display: flex;
+  }
+
+  .game img {
+    width: 30%;
+    height: 50%;
+    margin: auto 5px;
+    border-radius: 10px;
+  }
+
+  .game .text {
+    color: black;
+    text-align: left;
+    font-size: 18px;
+    padding: 2px;
+  }
+
+  .game .list {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0 0 10px 0;
+  }
+
+  .sub_hobby {
+    flex: 4;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .piano {
+    margin: 5px;
+    flex: 1;
+    border: solid 1px black;
+    border-radius: 10px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .piano .info {
+    text-align: left;
+    margin: auto;
+  }
+
+  .rubikcube {
+    flex: 1;
+    margin: 5px;
+    border: solid 1px black;
+    border-radius: 10px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .rubikcube .info {
+    text-align: left;
+    margin: auto;
   }
 
   .hidden {
