--- a/Artifact_Simulator.css
+++ b/Artifact_Simulator.css
@@ -6,7 +6,7 @@
 
 body{
     background: radial-gradient(circle at right top, black, rgb(71, 71, 71));
-    height: 100vh;
+    height: 100%;
 }
 
 nav {
@@ -131,7 +131,7 @@ nav {
 .container {
     display: flex;
     width: 50%;
-    min-width: 700px;
+    min-width: 1200px;
     margin: 20px auto;
 }
 
